[package]
name = "wisp-server-workers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
event-listener = "5.3.1"
flume = "0.11.0"
futures-util = "0.3.30"
regex = "1.10.5"
send_wrapper = "0.6.0"
tokio = { version = "1.38.0", features = ["io-util"] }
wisp-mux = { version = "4.0.1", features = ["tokio_io", "wasm"] }
worker = "0.2.0"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
